--- a/main.html
+++ b/main.html
@@ -7,6 +7,14 @@
 </head>
 
 <body>
+	<main class='hero'>
+		<img src='https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1' alt='pinterest' class='image' />
+		<div class='container'>
+			<h1>Welcome to my pinterest</h1>
+			<p>Discover new insperation and save your favorite ideas</p>
+			<button class='explore-now'>Expore now</button>
+		</div>
+	</main>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
